--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -10,6 +10,7 @@
   overflow: hidden;
   padding-bottom: 56.25%;
 }
+
 .video-wrapper > iframe {
   position: absolute;
   top: 0;
@@ -18,4 +19,8 @@
   width: 100%;
   height: 100%;
   border: 0;
+}
+
+.admonition p {
+  font-size: 1.2em;
 }
