--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -24,3 +24,62 @@
 .admonition p {
   font-size: 1.2em;
 }
+
+@media print {
+    .admonition p,
+    .admonition table,
+    .admonition ol,
+    .admonition ul,
+    .filename,
+    p,
+    ul,
+    ol {
+      font-size: 11pt;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    table {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+  
+    .admonition ol,
+    .admonition ul {
+      margin-left: 20px;
+    }
+  
+    p.admonition-title::before {
+      margin: -20px 0 0 -20px;
+    }
+  
+    ol {
+      margin-left: 40px;
+    }
+
+    .l,
+    code,
+    table {
+      font-size: 9pt;
+    }
+
+  }
+  
+  /*override text color of a button class to white*/
+  .cta-button {
+    background-color: #d048cb;
+    color: #fff !important;
+    border-radius: 4px;
+    padding: 5px 10px;
+    font-size: 0.9em;
+    font-weight: bold;
+    text-decoration: none;
+    display: inline-block;
+    margin-left: 10px;
+  }
+
+  .cta-button:hover {
+    background-color: #b03aa8;
+  }
+
+  .cta-button:active {
+    background-color: #8f2a85;
+  }
